# librock

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  GNUmakefile  Makefile  README.md  design.typ  meson.build  meson_options.txt  premake5.lua
doc/: album-names.txt  design.typ
include/: librock.h
include/librock/: def.h  err.h  io.h  iter.h  lex.h  librock.h  log.h  opt.h  pool.h  str.h  util.h
scripts/: bear.sh  test.sh
src/: err.c  log.c  pool.c  test.c
tests/: fail.c  main.c  pass.c  test_librock.c
